new bienestar_ca

--- a/templates/bienestar_ca.html
+++ b/templates/bienestar_ca.html
@@ -58,10 +58,10 @@
             </div>
             <div class="card-content">
               <div class="content">
-                <h4>Semana de la Salud Mental</h4>
-                <p>En conjunto con la Comisión de Bienestar, se continuará con el desarrollo de
-                        actividades para la Semana de la Salud Mental, poniendo énfasis en la visibilización
-                        e importancia de esta. </p>
+                <h4>Semana de Salud y Bienestar y Semana de la Salud Mental</h4>
+                <p>Habrán dos semanas de actividades temáticas, la primera se realizará durante junio y
+                    la segunda en octubre. El objetivo es fomentar el cuidado de la salud complementando
+                    el estudio o el trabajo</p>
                 <span class="button is-link modal-button" data-target="modal-card2">Detalles</span>
               </div>
             </div>
@@ -122,7 +122,43 @@
                 </div>
             </div>
         </div>
-
+        <div class="column is-4">
+            <div class="card is-shady">
+                <div class="card-image">
+                <figure class="image is-4by3">
+                    <img src="../images/bienestar_ca_picture.jpeg" alt="Placeholder image">
+                </figure>
+                </div>
+                <div class="card-content">
+                <div class="content">
+                    <h4>Unidad de Bienestar</h4>
+                    <p> Las opciones que asoman con mayor fuerza son la creación
+                        de una nueva Unidad de Bienestar, o bien un plan transversal a las direcciones ya existentes de modo que la cultura del CARE pueda llegar de forma activa al estudiantado en
+                        actividades del día a día.
+                             </p>
+                    <span class="button is-link modal-button" data-target="modal-card6">Detalles</span>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="columns features">
+            <div class="column is-4">
+                <div class="card is-shady">
+                    <div class="card-image">
+                    <figure class="image is-4by3">
+                        <img src="../images/bienestar_ca_picture.jpeg" alt="Placeholder image">
+                    </figure>
+                    </div>
+                    <div class="card-content">
+                    <div class="content">
+                        <h4>Encuestas de estrés</h4>
+                        <p>A modo de velar y dimensionar el estado anímico, emocional y afectivo de los estudiantes, realizaremos regularmente encuestas que nos permitirán analizar de mejor manera
+                            cuales son las fuentes de estrés más importantes</p>
+                        <span class="button is-link modal-button" data-target="modal-card7">Detalles</span>
+                    </div>
+                    </div>
+                </div>
+            </div>
       
         
 
@@ -178,18 +214,19 @@
             <div class="card-content">
                 <div class="media">
                 <div class="media-content">
-                    <p class="title is-4">Semana de la Salud Mental</p>
+                    <p class="title is-4">Semana de Salud y Bienestar y Semana de la Salud Mental</p>
                 </div>
                 </div>
                 <div class="content">
-                        En conjunto con la Comisión de Bienestar, se continuará con el desarrollo de
-actividades para la Semana de la Salud Mental, poniendo énfasis en la visibilización
-e importancia de esta, además de llamar a la participación de profesores, estudiantes
-y funcionarios. Esta es un problemática que cada vez toma más relevancia dentro de
-nuestras Escuela, ya que no podemos ignorar a nuestros propios compañeros, quienes
-se enfrentan a distintas problemáticas que, en ocasiones, pueden provocar la pérdida
-de sentido en la carrera.
-
+                    Habrán dos semanas de actividades temáticas, la primera se realizará durante junio y
+                    la segunda en octubre. El objetivo es fomentar el cuidado de la salud complementando
+                    el estudio o el trabajo, generando instancias en que la comunidad tenga momentos de
+                    distensión y de aprendizaje. En la Semana de salud y bienestar se promocionará la
+                    alimentación saludable, la salud sexual, consumo de sustancias y relajación, entre otras
+                    cosas. Durante la Semana de salud mental se trabajará en actividades de recreación,
+                    prevención del estrés y manejo de tiempos para un estudio óptimo. Todo esto se realizará
+                    en conjunto con Salud Estudiantil y distintos actores de Ingeniería, como la DiPre y
+                    algunos proyectos.
                 <br>
                 </div>
             </div>
@@ -304,13 +341,17 @@ apoyo de la Consejería Académica.
             <div class="card-content">
                 <div class="media">
                 <div class="media-content">
-                    <p class="title is-4">Visualización de datos </p>
+                    <p class="title is-4">Unidad de Bienestar </p>
                 </div>
                 </div>
                 <div class="content">
-                        Este proyecto nace de la necesidad de conocer las realidades que existen en ingeniería, tales como: la cantidad de estudiantes que se cambian de major, minor,
-cuantos egresan con doble título, egresados por año, entre otros. Esto se concretará por medio de visualización de datos amigable, ya sean digitales o físicas, que
-entreguen la información de forma clara y precisa.
+                    Este proyecto a gran escala se trabajará en conjunto con el CAi, dirección de Pregrado
+                    y decanato, porque entendemos que no lograremos cambios de esta magnitud por nuestra
+                    cuenta. Queremos que el bienestar sea una de las prioridades en nuestra Escuela y que
+                    esto se vea reflejado en diversos procesos de pregrado y en los ramos. Ya iniciamos conversaciones con la Escuela, por lo que está en proceso de evaluación la implementación
+                    en concreto de esta medida. Las opciones que asoman con mayor fuerza son la creación
+                    de una nueva Unidad de Bienestar, o bien un plan transversal a las direcciones ya existentes de modo que la cultura del CARE pueda llegar de forma activa al estudiantado en
+                    actividades del día a día.
                 <br>
                 </div>
             </div>
@@ -332,16 +373,15 @@ entreguen la información de forma clara y precisa.
             <div class="card-content">
                 <div class="media">
                 <div class="media-content">
-                    <p class="title is-4">Proyectos aplicados</p>
+                    <p class="title is-4">Encuestas de estrés</p>
                 </div>
                 </div>
                 <div class="content">
-                        En ingeniería existen varios proyectos de fin semestre a aplicados al ramo pero no
-a la sociedad. Aquí en la Escuela tenemos un taller de mecánica con profesionales del
-más alto nivel, quienes instruyen a los estudiantes en el uso de las diversas máquinas.
-¿Por qué no idear un proyecto en conjunto? Cada estudiante tendría que fabricar
-una pieza, de modo que al juntarlas todas, se creara algún tipo de infraestructura
-útil, como más mesas en el patio por ejemplo.
+                    A modo de velar y dimensionar el estado anímico, emocional y afectivo de los estudiantes, realizaremos regularmente encuestas que nos permitirán analizar de mejor manera
+                    cuales son las fuentes de estrés más importantes segun la época del semestre y tomar
+                    medidas concretas al respecto. Esta idea ya fue implementada anteriormente por la
+                    consejería pasada.
+                    
 
                         
                 <br>
