new bienestar_ca

--- a/templates/bienestar_ca.html
+++ b/templates/bienestar_ca.html
@@ -21,7 +21,7 @@
       <div class="hero-body">
         <div class="container has-text-centered">
           <p class="title">
-            Bienestar Estudiantil y Salud Mental
+            Bienesta Estudiantil y Salud Mental
           </p>
         </div>
       </div>
