new bienestar_ca

--- a/templates/bienestar_ca.html
+++ b/templates/bienestar_ca.html
@@ -21,7 +21,7 @@
       <div class="hero-body">
         <div class="container has-text-centered">
           <p class="title">
-            Bienesta Estudiantil y Salud Mental
+            Bienestar Estudiantil y Salud Mental
           </p>
         </div>
       </div>
@@ -141,6 +141,8 @@
                 </div>
             </div>
         </div>
+      </div>
+      <div style="margin-top: -10rem;" class="columns features"></div>
         <div class="columns features">
             <div class="column is-4">
                 <div class="card is-shady">
