--- a/templates/sustentabilidad_medioambiente.html
+++ b/templates/sustentabilidad_medioambiente.html
@@ -241,6 +241,7 @@
           </div>
       </div>
     </div>
+    <div style="margin-top: -10rem;" class="columns features">
     <div class="columns features">
       <!-- Inicio tarjeta -->
       <div class="column is-4">
@@ -294,6 +295,7 @@
             </div>
         </div>
       </div>
+      <div style="margin-top: -10rem;" class="columns features">
       <div class="columns features">
         <!-- Inicio tarjeta -->
         <div class="column is-4">
@@ -348,6 +350,8 @@
               </div>
           </div>
       </div>
+    </div>
+    <div style="margin-top: -10rem;" class="columns features">
       <!-- Final tarjeta -->
       <div class="column is-4">
         <div class="card is-shady">
@@ -368,8 +372,6 @@
         </div>
       </div>
       </div>
-
-
     </section>
 
     <!--  ===============
