--- a/templates/sustentabilidad_medioambiente.html
+++ b/templates/sustentabilidad_medioambiente.html
@@ -295,6 +295,7 @@
             </div>
         </div>
       </div>
+    </div>
       <div style="margin-top: -10rem;" class="columns features">
       <div class="columns features">
         <!-- Inicio tarjeta -->
@@ -350,6 +351,7 @@
               </div>
           </div>
       </div>
+    </div>
     </div>
     <div style="margin-top: -10rem;" class="columns features">
       <!-- Final tarjeta -->
